--- a/Lb1/ЛБ-1_Бакулін.md
+++ b/Lb1/ЛБ-1_Бакулін.md
@@ -16,7 +16,7 @@
 - **SUN-BRIGHTNESS** - відносна інтенсивність сонячного потоку, `1,0` відповідає сучасному Сонцю.
 - **ALBEDO** - частка відбитого сонячного світла поверхнею (0…1), орієнтовне значення для моделі - `0,6`.
 - **CLOUDS** - додати/прибрати хмари (блокують сонячне, але не ІЧ-випромінювання).
-- **CO2 (ADD/REMOVE)** - додавання/видалення молекул CO2 групами по 25 (до 150), CO2 блокує ІЧ і підсилює парниковий ефект.
+- **CO2** - додавання/видалення молекул CO2 групами по 25 (до 150), CO2 блокує ІЧ і підсилює парниковий ефект.
 - **WATCH A RAY** - спостереження за окремим променем.
 
 ### Внутрішні параметри:
